--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,700;1,700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -21,5 +25,9 @@ table {
 
 .rdp-selected {
   color: white;
-  background-color: #2196f3;
+  background-color: #f2c31b;
+}
+
+body {
+  font-family: "Garamond";
 }
