--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,15 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html,
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
