--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,9 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+@layer components {
+  button {
+    @apply mt-[4rem] mb-[4rem];
+  }
+}
